cluster/manifests/pushgateway-statsd/overlays/dev/statsd-exporter/peer_authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: statsd-exporter
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: statsd-exporter
  mtls:
    mode: STRICT
