cluster/manifests/pushgateway-statsd/overlays/dev/statsd-exporter/sidecar.yaml
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: statsd-exporter
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/component: statsd-exporter
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
  egress:
    - captureMode: DEFAULT
      hosts:
        - istio-system/istiod.istio-system.svc.cluster.local
        - otel/otel-agent.otel.svc.cluster.local
